--- a/front/index.html
+++ b/front/index.html
@@ -8,7 +8,7 @@
 -->
 <!DOCTYPE html>
 <head>
-    <title>qianduan.shop</title>
+    <title>前端网 - 聚合前端优质资源</title>
 </head>
 <body>
     <div id="root"></div>
