--- a/front/index.html
+++ b/front/index.html
@@ -9,6 +9,7 @@
 <!DOCTYPE html>
 <head>
     <title>前端网 - 聚合前端优质资源</title>
+    <script data-ad-client="ca-pub-2087076429727327" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
     <div id="root"></div>
