--- a/front/index.html
+++ b/front/index.html
@@ -10,6 +10,7 @@
 
 <head>
     <title>前端网 - 聚合前端优质资源</title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <script data-ad-client="ca-pub-2087076429727327" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
