--- a/front/index.dev.html
+++ b/front/index.dev.html
@@ -11,6 +11,16 @@
 <head>
     <title>前端网 - 聚合前端优质资源</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <script>
+        var _hmt = _hmt || [];
+        (function () {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?92956cfdc7c215ba71af5f2a82f81150";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+
 </head>
 
 <body>
