--- a/front/index.dev.html
+++ b/front/index.dev.html
@@ -11,7 +11,7 @@
 <head>
     <title>前端网 - 聚合前端优质资源</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <script>
+    <!-- <script>
         var _hmt = _hmt || [];
         (function () {
             var hm = document.createElement("script");
@@ -19,8 +19,7 @@
             var s = document.getElementsByTagName("script")[0];
             s.parentNode.insertBefore(hm, s);
         })();
-    </script>
-
+    </script> -->
 </head>
 
 <body>
