百度网站html验证

--- a/front/index.html
+++ b/front/index.html
@@ -11,6 +11,7 @@
 <head>
     <title>前端网 - 聚合前端优质资源</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <meta name="baidu-site-verification" content="code-k1AIggiagJ" />
     <script data-ad-client="ca-pub-2087076429727327" async
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
